--- a/dvc.yaml
+++ b/dvc.yaml
@@ -3,6 +3,7 @@ stages:
     cmd: python src/stages/data_load.py --config=params.yaml
     deps:
     - src/stages/data_load.py
+    - data/manual/test.csv
     params:
     - data_load
     outs:
