--- a/params.yaml
+++ b/params.yaml
@@ -9,6 +9,8 @@ featurize:
   data_test_csv_path: 'data/test/iris_test.csv'
 
 train:
+  penalty: 'l2'
+  solver: 'sag'
   logistic_regression_path: 'models/logistic_regression.pkl'
 
 evaluate:
